Fixed some spacing and scaling issues

--- a/src/App/components/LivestreamTile/style.module.sass
+++ b/src/App/components/LivestreamTile/style.module.sass
@@ -56,11 +56,11 @@
 
   .rightPart
     position: absolute
-    width: calc(100% - 119px)
+    width: calc(100% - 115px)
     height: 100%
     top: 0
     right: 0
-    padding: 2px 2px 2px 3px
+    padding: 2px 2px 2px 6px
     box-sizing: border-box
 
     .streamTitle
@@ -83,7 +83,7 @@
     .streamTime, .streamLanguage, .streamMature
       display: inline-block
       color: $stream-element-text
-      padding: 1px 7px 1px 6px
+      padding: 1px 6px 1px 6px
       background-color: $stream-tags-background
       border: 1px solid $stream-tags-border
       border-radius: 15px
@@ -102,15 +102,14 @@
       border-radius: 15px
       right: 0
       bottom: 3px
-      font-size: 14px
+      font-size: 12px
       font-weight: bold
       box-sizing: border-box
-      transform: scale(0.85)
 
       .liveCircle
         background-color: #eb0400
-        width: 15px
-        height: 15px
+        width: 13px
+        height: 13px
         border-radius: 50%
         margin-right: 5px
         margin-top: 1px
